# judgekit

./: README.md  pyproject.toml
examples/: items.jsonl  qa.yaml
src/judgekit/: __init__.py  calibration.py  cli.py  ensemble.py  judges.py  proxy.py  rubric.py  rubric_file.py  types.py
tests/: test_core.py  test_ensemble.py  test_rubric_file.py
