[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "judgekit"
version = "0.2.0"
description = "A reusable LLM-as-judge harness — rubrics (YAML/JSON), pluggable judges, cheap proxy metrics, and calibration against ground truth."
authors = [{name = "alvabillwu", email = "alvabill@outlook.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]

[project.scripts]
judgekit = "judgekit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
judge = ["openai>=1.0"]  # optional: real LLM judge backend

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
